close #4, first version homePage controller + some views fixes

--- a/templates/addTrick.html.twig
+++ b/templates/addTrick.html.twig
@@ -1,6 +1,6 @@
 {% extends "common/template.html.twig" %}
 
-{% block stylesheet %}
+{% block stylesheets %}
 <link rel="stylesheet" href="{{ asset('assets/css/trick.css') }}">
 {% endblock %}
 
