--- a/templates/common/footer.html.twig
+++ b/templates/common/footer.html.twig
@@ -35,7 +35,7 @@
             <!-- Footer About Text-->
             <div class="col-lg-4">
                 <a href="index.html">
-                    <img src="assets/img/snowtricks-logo.png" height="150" alt="navbar-logo">
+                    <img src="{{ asset('assets/images/snowtricks-logo.png') }}" height="150" alt="navbar-logo">
                 </a>
                 <p class="lead mb-0">
                     Share your snowboarding tricks experience by posting comments, photos and videos.
