--- a/templates/common/nav.html.twig
+++ b/templates/common/nav.html.twig
@@ -3,7 +3,7 @@
     <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top shadow" id="mainNav">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img src="assets/img/snowtricks-logo.png" height="70" alt="navbar-logo">
+                <img src="{{ asset('assets/images/snowtricks-logo.png') }}" height="70" alt="navbar-logo">
             </a>
             <button class="navbar-toggler text-uppercase font-weight-bold bg-primary text-secondary rounded"
                 type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
