--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -2326,10 +2326,9 @@ progress {
 
 .form-control:focus {
   color: #212529;
-  background-color: #fff;
-  border-color: #8ddece;
+  border-color: #fff !important;
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(26, 188, 156, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(255, 255, 255, 1);
 }
 
 .form-control::-webkit-date-and-time-value {
@@ -2353,7 +2352,7 @@ progress {
 
 .form-control:disabled,
 .form-control[readonly] {
-  background-color: #e9ecef;
+  background-color: grey;
   opacity: 1;
 }
 
