--- a/templates/common/footer.html.twig
+++ b/templates/common/footer.html.twig
@@ -7,17 +7,20 @@
                 <h4 class="text-uppercase mb-4">Sitemap</h4>
                 <ul class="list-unstyled">
                     <li class="lead mb-0">
-                        <a class="nav-link text-white rounded" href="index.html">Home</a>
+                        <a class="nav-link text-white rounded" href="{{ path('home.index') }}">Home</a>
                     </li>
                     <li class="lead mb-0">
-                        <a class="nav-link text-white rounded" href="login.html">Sign in</a>
+                        <a class="nav-link text-white rounded" href="{{ path('app_register') }}">Sign up</a>
                     </li>
+                    {% if app.user %}
                     <li class="lead mb-0">
-                        <a class="nav-link text-white rounded" href="signup.html">Sign up</a>
+                        <a class="nav-link text-white rounded" href="{{ path('app_logout') }}">Sign out</a>
                     </li>
+                    {% else %}
                     <li class="lead mb-0">
-                        <a class="nav-link text-white rounded" href="signout.html">Sign out</a>
+                        <a class="nav-link text-white rounded" href="{{ path('app_login') }}">Sign in</a>
                     </li>
+                    {% endif %}
                 </ul>
             </div>
             <!-- Footer Social Icons-->
