--- a/templates/security/forgottenPassword.html.twig
+++ b/templates/security/forgottenPassword.html.twig
@@ -5,8 +5,7 @@
 {% endblock %}
 
 {% block content %}
-
-<!-- Reset Password -->
+<!-- Password Forgotten -->
 <section class="ftco-section masthead">
     <div class="container">
         <div class="row justify-content-center">
@@ -16,30 +15,23 @@
                         <img src="assets/images/lunette.png" width="100%" alt="">
                     </a>
                     <h3 class="text-center mb-0" style="color: #fafafacc">Welcome</h3>
-                    <p class="text-center" style="color: #fafafacc">Now you can reset your password</p>
-                    <form action="#" class="login-form">
+                    <p class="text-center" style="color: #fafafacc">Did you forgot your password? Ask for reset</p>
+                    {{ form_start(requestPassForm) }}
                         <div class="form-group">
                             <div class="icon d-flex align-items-center justify-content-center"><span
                                     class="fa fa-user"></span></div>
-                            <input type="text" name="username" id="username" class="form-control text-white rounded"
-                                placeholder="Username" required>
+                                    {{ form_row(requestPassForm.username) }}
                         </div>
-                        <div class="form-group">
-                            <div class="icon d-flex align-items-center justify-content-center"><span
-                                    class="fa fa-lock"></span></div>
-                            <input type="password" name="password" id="password" class="form-control text-white rounded"
-                                placeholder="New Password" required>
-                        </div>
+                        
                         <div class="d-flex justify-content-center pb-3">
                             <button type="submit" name="submit" class="btn btn-login load mx-3 shadow-lg my-auto">
-                                Reset your Password
+                                Ask for reset Password
                             </button>
                         </div>
-                    </form>
+                    {{ form_end(requestPassForm) }}
                 </div>
             </div>
         </div>
     </div>
 </section>
-
 {% endblock %}
