--- a/templates/security/resetPassword.html.twig
+++ b/templates/security/resetPassword.html.twig
@@ -5,37 +5,30 @@
 {% endblock %}
 
 {% block content %}
+<!-- New Password -->
 
-<!-- Reset Password -->
 <section class="ftco-section masthead">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-6 col-lg-4">
                 <div id="login" class="login-wrap bg-secondary py-3 shadow d-block">
                     <a href="index.html" class="d-flex align-items-center justify-content-center p-4">
-                        <img src="assets/images/lunette.png" width="100%" alt="">
+                        <img src="/assets/images/lunette.png" width="100%" alt="">
                     </a>
                     <h3 class="text-center mb-0" style="color: #fafafacc">Welcome</h3>
                     <p class="text-center" style="color: #fafafacc">Now you can reset your password</p>
-                    <form action="#" class="login-form">
-                        <div class="form-group">
-                            <div class="icon d-flex align-items-center justify-content-center"><span
-                                    class="fa fa-user"></span></div>
-                            <input type="text" name="username" id="username" class="form-control text-white rounded"
-                                placeholder="Username" required>
-                        </div>
+                    {{ form_start(passForm) }}
                         <div class="form-group">
                             <div class="icon d-flex align-items-center justify-content-center"><span
                                     class="fa fa-lock"></span></div>
-                            <input type="password" name="password" id="password" class="form-control text-white rounded"
-                                placeholder="New Password" required>
+                            {{ form_row(passForm.password) }}
                         </div>
                         <div class="d-flex justify-content-center pb-3">
                             <button type="submit" name="submit" class="btn btn-login load mx-3 shadow-lg my-auto">
                                 Reset your Password
                             </button>
                         </div>
-                    </form>
+                    {{ form_end(passForm) }}
                 </div>
             </div>
         </div>
