--- a/templates/editTrick.html.twig
+++ b/templates/editTrick.html.twig
@@ -23,7 +23,7 @@
             </button>
         </div>-->
         <!-- Masthead Trick Title-->
-        <h1 class="masthead-heading text-uppercase text-secondary mb-0">Trick name</h1>
+        <h1 class="masthead-heading text-uppercase text-secondary mb-0">EDIT : Trick</h1>
         <!-- Masthead Subheading
         <p class="masthead-subheading font-weight-light text-secondary mb-0">Trick group</p>-->
     </div>
