--- a/templates/trick.html.twig
+++ b/templates/trick.html.twig
@@ -12,16 +12,18 @@
 <!-- Masthead-->
 <header class="masthead bg-primary text-white text-center d-flex flex-column px-2">
     <div class="container d-flex align-items-center flex-column">
+        {% if app.user and app.user.isVerified == true %}
         <!--Manager button-->
         <div class="align-self-end">
-            <a href="editTrick.html" class="btn btn-home-grid mx-3 my-auto rounded shadow-lg">
-                <i class="fa fa-pen" style='color: #fafafacc'></i>
+            <a href="{{ path('app_edit_trick') }}" class="btn btn-home-grid mx-3 my-auto rounded shadow-lg">
+                <i class="fa fa-pen fa-xl p-1" style='color: #fafafacc'></i>
             </a>
             <button class="btn btn-home-grid my-auto rounded shadow-lg" data-bs-toggle="modal"
                 data-bs-target="#exampleModal">
-                <i class="fa fa-trash" style='color: #fafafacc'></i>
+                <i class="fa fa-trash fa-xl p-1" style='color: #fafafacc'></i>
             </button>
         </div>
+        {% endif %}
         <!-- Masthead Trick Title-->
         <h1 class="masthead-heading text-uppercase text-secondary mb-0">Trick Name</h1>
         <!-- Masthead Subheading-->
@@ -42,6 +44,7 @@
                 <i class="fa fa-arrow-left fa-xl prev-icon"></i>
             </span>
             <div id="slider">
+                {% for i in 0..4 %}
                 <div class="slide-item">
                     <div class="carousel-item d-block active">
                         <div class="card portfolio-item mx-auto">
@@ -52,15 +55,15 @@
                                         See it !
                                     </div>
                                 </div>
-                                <img src="https://i.imgur.com/ZTkt4I5.jpg" class="card-img-top" alt="...">
+                                <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="...">
                             </div>
                             <div class="card-body d-flex  justify-content-center">
-                                <div class="d-flex justify-content-between">
+                                <div class="d-flex justify-content-center">
                                     <div class="d-flex">
                                         <i class="fa-brands fa-youtube fa-2xl my-auto" style="color: #ff0000;"></i>
                                         <h5 class="card-title my-auto mx-3">Video</h5>
                                     </div>
-                                    <div class="d-flex">
+                                    <!--<div class="d-flex">
                                         <a href="editTrick.html" class="btn btn-home-grid mx-2 my-auto rounded">
                                             <i class="fa fa-pen" style='color: #fafafacc'></i>
                                         </a>
@@ -68,12 +71,14 @@
                                             data-bs-toggle="modal" data-bs-target="#exampleModal">
                                             <i class="fa fa-trash" style='color: #fafafacc'></i>
                                         </button>
-                                    </div>
+                                    </div>-->
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>
+                </div>      
+                {% endfor %}
+                {% for i in 0..4 %}
                 <div class="slide-item">
                     <div class="carousel-item d-block active">
                         <div class="card portfolio-item mx-auto">
@@ -84,71 +89,7 @@
                                         See it !
                                     </div>
                                 </div>
-                                <img src="https://i.imgur.com/ZTkt4I5.jpg" class="card-img-top" alt="...">
-                            </div>
-                            <div class="card-body d-flex  justify-content-center">
-                                <div class="d-flex justify-content-between">
-                                    <div class="d-flex">
-                                        <i class="fa-brands fa-youtube fa-2xl my-auto" style="color: #ff0000;"></i>
-                                        <h5 class="card-title my-auto mx-3">Video</h5>
-                                    </div>
-                                    <div class="d-flex">
-                                        <a href="editTrick.html" class="btn btn-home-grid mx-2 my-auto rounded">
-                                            <i class="fa fa-pen" style='color: #fafafacc'></i>
-                                        </a>
-                                        <button href="#" class="btn btn-home-grid my-auto rounded"
-                                            data-bs-toggle="modal" data-bs-target="#exampleModal">
-                                            <i class="fa fa-trash" style='color: #fafafacc'></i>
-                                        </button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="slide-item">
-                    <div class="carousel-item d-block active">
-                        <div class="card portfolio-item mx-auto">
-                            <div class="position-relative">
-                                <div
-                                    class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                                    <div class="portfolio-item-caption-content text-center text-secondary">
-                                        See it !
-                                    </div>
-                                </div>
-                                <img src="https://i.imgur.com/ZTkt4I5.jpg" class="card-img-top" alt="...">
-                            </div>
-                            <div class="card-body d-flex  justify-content-center">
-                                <div class="d-flex justify-content-between">
-                                    <div class="d-flex">
-                                        <i class="fa-brands fa-youtube fa-2xl my-auto" style="color: #ff0000;"></i>
-                                        <h5 class="card-title my-auto mx-3">Video</h5>
-                                    </div>
-                                    <div class="d-flex">
-                                        <a href="editTrick.html" class="btn btn-home-grid mx-2 my-auto rounded">
-                                            <i class="fa fa-pen" style='color: #fafafacc'></i>
-                                        </a>
-                                        <button href="#" class="btn btn-home-grid my-auto rounded"
-                                            data-bs-toggle="modal" data-bs-target="#exampleModal">
-                                            <i class="fa fa-trash" style='color: #fafafacc'></i>
-                                        </button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="slide-item">
-                    <div class="carousel-item d-block active">
-                        <div class="card portfolio-item mx-auto">
-                            <div class="position-relative">
-                                <div
-                                    class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                                    <div class="portfolio-item-caption-content text-center text-secondary">
-                                        See it !
-                                    </div>
-                                </div>
-                                <img src="https://i.imgur.com/ZTkt4I5.jpg" class="card-img-top" alt="...">
+                                <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="...">
                             </div>
                             <div class="card-body d-flex  justify-content-center">
                                 <div class="d-flex justify-content-between">
@@ -156,7 +97,7 @@
                                         <i class="fa fa-image fa-2xl my-auto" style='color: #fafafacc'></i>
                                         <h5 class="card-title my-auto mx-3">Image</h5>
                                     </div>
-                                    <div class="d-flex">
+                                    <!--<div class="d-flex">
                                         <a href="editTrick.html" class="btn btn-home-grid mx-2 my-auto rounded">
                                             <i class="fa fa-pen" style='color: #fafafacc'></i>
                                         </a>
@@ -164,76 +105,13 @@
                                             data-bs-toggle="modal" data-bs-target="#exampleModal">
                                             <i class="fa fa-trash" style='color: #fafafacc'></i>
                                         </button>
-                                    </div>
+                                    </div>-->
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="slide-item">
-                    <div class="carousel-item d-block active">
-                        <div class="card portfolio-item mx-auto">
-                            <div class="position-relative">
-                                <div
-                                    class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                                    <div class="portfolio-item-caption-content text-center text-secondary">
-                                        See it !
-                                    </div>
-                                </div>
-                                <img src="https://i.imgur.com/ZTkt4I5.jpg" class="card-img-top" alt="...">
-                            </div>
-                            <div class="card-body d-flex  justify-content-center">
-                                <div class="d-flex justify-content-between">
-                                    <div class="d-flex">
-                                        <i class="fa fa-image fa-2xl my-auto" style='color: #fafafacc'></i>
-                                        <h5 class="card-title my-auto mx-3">Image</h5>
-                                    </div>
-                                    <div class="d-flex">
-                                        <a href="editTrick.html" class="btn btn-home-grid mx-2 my-auto rounded">
-                                            <i class="fa fa-pen" style='color: #fafafacc'></i>
-                                        </a>
-                                        <button href="#" class="btn btn-home-grid my-auto rounded"
-                                            data-bs-toggle="modal" data-bs-target="#exampleModal">
-                                            <i class="fa fa-trash" style='color: #fafafacc'></i>
-                                        </button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="slide-item">
-                    <div class="carousel-item d-block active">
-                        <div class="card portfolio-item mx-auto">
-                            <div class="position-relative">
-                                <div
-                                    class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                                    <div class="portfolio-item-caption-content text-center text-secondary">
-                                        See it !
-                                    </div>
-                                </div>
-                                <img src="https://i.imgur.com/ZTkt4I5.jpg" class="card-img-top" alt="...">
-                            </div>
-                            <div class="card-body d-flex  justify-content-center">
-                                <div class="d-flex justify-content-between">
-                                    <div class="d-flex">
-                                        <i class="fa fa-image fa-2xl my-auto" style='color: #fafafacc'></i>
-                                        <h5 class="card-title my-auto mx-3">Image</h5>
-                                    </div>
-                                    <div class="d-flex">
-                                        <a href="editTrick.html" class="btn btn-home-grid mx-2 my-auto rounded">
-                                            <i class="fa fa-pen" style='color: #fafafacc'></i>
-                                        </a>
-                                        <button href="#" class="btn btn-home-grid my-auto rounded"
-                                            data-bs-toggle="modal" data-bs-target="#exampleModal">
-                                            <i class="fa fa-trash" style='color: #fafafacc'></i>
-                                        </button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                </div>   
+                {% endfor %}
             </div>
             <span onclick="slideLeft()" class="carousel-btn carousel-control-next">
                 <i class="fa fa-arrow-right fa-xl next-icon"></i>
@@ -270,18 +148,23 @@
             <span class="badge bg-success p-3 m-3">Trick publication update date</span>
         </div>
         <hr>
+        {% if app.user and app.user.isVerified == true %}
         <!-- Leave a comment -->
-        <form action="#" class="login-form">
-            <div class="form-group">
-                <div class=" d-flex flex-wrap align-items-center justify-content-center py-4">
-                    <textarea name="comment" id="comment" class="form-control text-white rounded" rows='5' cols="50"
-                        placeholder="Post a comment" required></textarea>
-                    <input type="submit" name="submit" id="submit"
-                        class="btn btn-home-grid mx-3 my-4 my-xl-auto  rounded shadow-lg" value="Post a comment">
-                    </input>
+        <div class="container">
+            <form action="#" class="login-form mx-auto">
+                <div class="form-group">
+                    <div class=" d-flex flex-wrap align-items-center justify-content-center py-4">
+                        <textarea name="comment" id="comment" class="form-control text-white rounded" rows='5' cols="50"
+                            placeholder="Post a comment" required></textarea>
+                        <input type="submit" name="submit" id="submit"
+                            class="btn btn-home-grid mx-3 mt-4  rounded shadow-lg" value="Post a comment">
+                        </input>
+                    </div>
                 </div>
-        </form>
-        <hr>
+            </form>
+            <hr>
+        </div>
+        {% endif %}
         <!-- comments-->
         <div class="comment d-flex justify-content-center my-4">
             <div class="comment-body d-flex my-auto" style='color: #fafafacc'>
