close #10, datafixtures added, YoutubeThumbnail service added, fix Entity names, modals updates

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -5279,7 +5279,7 @@ fieldset:disabled .btn {
 .card-img,
 .card-img-top,
 .card-img-bottom {
-  width: 100%;
+ width: 100% !important;
 }
 
 .card-img,
