--- a/templates/modals/trick.modals.html.twig
+++ b/templates/modals/trick.modals.html.twig
@@ -1,4 +1,4 @@
-<!-- Trick Modal 1-->
+<!-- Trick Modal -->
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog d-flex align-items-center">
         <div class="modal-content">
@@ -9,10 +9,10 @@
             <div class="modal-body">
                 Are you sure to want to delete this trick?
             </div>
-            <input type="text" id="trickId">
+            <input type="hidden" id="trickId">
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary col-6" data-bs-dismiss="modal">Sure !</button>
-                <button type="button" class="btn btn-primary col-6">Cancel</button>
+                <button type="button" class="btn btn-outline-success col-6" >Sure !</button>
+                <button type="button" class="btn btn-outline-danger col-6" data-bs-dismiss="modal">Cancel</button>
             </div>
         </div>
     </div>
