--- a/templates/addTrick.html.twig
+++ b/templates/addTrick.html.twig
@@ -12,20 +12,8 @@
 <!-- Masthead-->
 <header class="masthead bg-primary text-white text-center d-flex flex-column px-2">
     <div class="container d-flex align-items-center flex-column">
-        <!--Manager button
-        <div class="align-self-end">
-            <button href="#" class="btn btn-home-grid mx-3 my-auto rounded shadow-lg">
-                <i class="fa fa-pen" style='color: #fafafacc'></i>
-            </button>
-            <button href="#" class="btn btn-home-grid my-auto rounded shadow-lg" data-bs-toggle="modal"
-                data-bs-target="#exampleModal">
-                <i class="fa fa-trash" style='color: #fafafacc'></i>
-            </button>
-        </div>-->
         <!-- Masthead Trick Title-->
         <h1 class="masthead-heading text-uppercase text-secondary mb-0">ADD A TRICK</h1>
-        <!-- Masthead Subheading
-        <p class="masthead-subheading font-weight-light text-secondary mb-0">Trick group</p>-->
     </div>
 </header>
 <!-- Trick Section-->
@@ -44,10 +32,9 @@
         <div class="form-group input-group input-group-lg mb-4">
             <select class="form-control rounded" name="trickGroup" id="trickGroup">
                 <option value="" selected disabled>--- Select a trick group ---</option>
-                <option value="1">Group 1</option>
-                <option value="2">Group 2</option>
-                <option value="3">Group 3</option>
-                <option value="4">Group 4</option>
+                {% for category in categories %}
+                <option value="{{ category.id }}">{{ category.name }}</option>
+                {% endfor %}
             </select>
         </div>
         <div class="form-group">
@@ -60,16 +47,21 @@
         <h2 class="page-section-heading text-center text-uppercase text-primary mb-5 pt-4" id="trick-list">
             Add Media
         </h2>
-        <div class="input-group input-group-lg mb-4 ">
+        <p class="mb-4" style='color: #fafafacc'>Add here a featured image</p>
+        <div class="input-group input-group-lg mb-5">
+            <input class="form-control rounded pl-0" type="file" id="formFile">
+        </div>
+        <p style='color: #fafafacc'>Your video url should look like this:</p>
+        <p style='color: #fafafacc; font-style: italic;'>https://www.youtube.com/watch?v=fNPQTlEKkJk</p>
+        <div class="input-group input-group-lg mb-5 ">
             <input type="url" class="form-control rounded" name="url" id="url" placeholder="Add a youtube trick url"
                 pattern="https://.*" required>
         </div>
-        <div class="input-group input-group-lg position-relative" id="upload-input">
-            <button class="btn btn-outline-secondary px-4" type="button" id="button-addon1">Upload Image</button>
-        </div>
+        <p class="mb-4" style='color: #fafafacc'>Prefer images in 16/9 format</p>
         <div class="input-group input-group-lg mb-4">
             <input class="form-control rounded pl-0" type="file" id="formFileMultiple" multiple>
         </div>
+
         <div class="d-flex justify-content-center">
             <input type="submit" name="submit" id="submit"
                 class="btn btn-home-grid mx-3 my-4 my-xl-auto  rounded shadow-lg" value="Save this Trick">
