--- a/templates/common/nav.html.twig
+++ b/templates/common/nav.html.twig
@@ -2,7 +2,7 @@
     <!-- Main Navigation-->
     <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top shadow" id="mainNav">
         <div class="container">
-            <a class="navbar-brand" href="index.html">
+            <a class="navbar-brand" href="{{ path('home.index') }}">
                 <img src="{{ asset('assets/images/snowtricks-logo.png') }}" height="70" alt="navbar-logo">
             </a>
             <button class="navbar-toggler text-uppercase font-weight-bold bg-primary text-secondary rounded"
