close #11, add home page pagination + video thumbnail display fixes

--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -75,7 +75,7 @@
         <!-- Trick Grid Items-->
         <div class="container">
             <div class="row justify-content-center px-3">
-                {% for trick in tricks %}
+                {% for trick in tricks.data %}
                 <div class=" col-xxl-2_4 col-xl-3 col-lg-4 col-md-6 mb-5">
                     <div class="card d-flex flex-column h-100 portfolio-item mx-auto">
                         <div class="position-relative">
@@ -118,12 +118,17 @@
             </div>
         </div>
     </div>
-    <div class="d-flex justify-content-center align-items-center">
+
+{% set path = "home.index" %}
+{% set pages = tricks.pages %}
+{% set currentPage = tricks.page %}
+{% include "common/pagination.html.twig" %}
+    <!--<div class="d-flex justify-content-center align-items-center">
         <button href="#" class="btn btn-home-grid load mx-3 my-auto" style="color: #fafafacc">
             <i class="fa fa-spinner" style='color: #fafafacc'></i>
             Load More tricks...
         </button>
-    </div>
+    </div>-->
 </section>
 
 {% include "modals/trick.modals.html.twig" %}
