--- a/templates/common/template.html.twig
+++ b/templates/common/template.html.twig
@@ -18,17 +18,8 @@
     <!-- stylesheets-->
     <!-- Core theme CSS (includes Bootstrap)-->
     <link rel="stylesheet" href="{{ asset('assets/css/styles.min.css') }}">
+    
     {% block stylesheets %}{% endblock %}
-
-    <!-- js files-->
-    <!-- Jquery -->
-    <script src="https://code.jquery.com/jquery-3.6.2.min.js"
-        integrity="sha256-2krYZKh//PcchRtd+H+VyyQoZ/e3EcrkxhM8ycwASPA=" crossorigin="anonymous" defer></script>
-    <!-- Bootstrap core JS-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" defer></script>
-    <!-- Core theme JS-->
-    <script src="{{ asset('assets/js/scripts.js') }}" defer></script>
-    {% block javascripts %}{% endblock %}
 
 </head>
 
@@ -38,6 +29,17 @@
     {% block content %}{% endblock %}
 
     {% include "common/footer.html.twig" %}
+
+    <!-- js files-->
+    <!-- Jquery -->
+    <script src="https://code.jquery.com/jquery-3.6.2.min.js"
+        integrity="sha256-2krYZKh//PcchRtd+H+VyyQoZ/e3EcrkxhM8ycwASPA=" crossorigin="anonymous"></script>
+    <!-- Bootstrap core JS-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Core theme JS-->
+    <script src="{{ asset('assets/js/scripts.js') }}"></script>
+
+    {% block javascripts %}{% endblock %}
 </body>
 
 </html>
