comment feature + comment button load more added

--- a/public/assets/css/trick.css
+++ b/public/assets/css/trick.css
@@ -239,6 +239,11 @@ textarea {
     max-width: 800px;
 }
 
+#comment {
+    max-width: 800px!important;
+    margin: 0 auto;
+}
+
 .comment {
     width: 100%;
 }
